preventing text select on mobile

--- a/src/styles/code.scss
+++ b/src/styles/code.scss
@@ -82,6 +82,7 @@ $offset: 20;
 	#component{
 		border-radius: 0;
 		margin: auto;
+		user-select: none;
 
 		.grid{
 			&:active{ 
